# betting-house-world

./: .env.example  .gitignore  Intial-plan.md  README.md  polla-mundialista.rules  polla.sh  predictions.json  predictions_weekend.json  pyproject.toml  requirements.txt  setup.sh
.kiro/steering/: polla-strategy.md  project-standards.md
docs/: bookmaker_edge_analysis.md  bookmaker_investigation.md
scripts/: collect_results.py  daily_update.sh  feedback_report.py  submit_polla.py
src/: __init__.py  __main__.py  cache_store.py  data_quality.py  dixon_coles.py  feedback_analyzer.py  lambda_optimizer.py  main.py  margin_eliminator.py  models.py  odds_extractor.py  output.py  polla_scorer.py  polla_submitter.py  prediction_store.py  results_collector.py  retro_feedback.py  score_matrix.py  value_output.py
src/_deprecated/: __init__.py  bookmaker_scorer.py  divergence.py  polla_optimizer.py  value_detector.py
src/adapters/: __init__.py  base.py  betfair.py  odds_api.py  onexbet.py  registry.py  unibet.py
src/scraping/: __init__.py  headless.py  http_scraper.py  resilience.py
tests/: test_adapter_registry.py  test_api_investigation.py  test_betfair_adapter.py  test_cache_store.py  test_feedback.py  test_headless_scraper.py  test_http_scraper.py  test_lambda_optimizer.py  test_margin_eliminator.py  test_odds_api_adapter.py  test_odds_extractor.py  test_onexbet_adapter.py  test_output.py  test_polla_scorer.py  test_resilience.py  test_retro_feedback.py  test_score_matrix.py  test_unibet_adapter.py
tests/_deprecated/: test_bookmaker_scorer.py  test_data_quality.py  (+2 more)
(+8 files in other folders)
